add 2 pages, format the pages, change the header

--- a/P1/group.html
+++ b/P1/group.html
@@ -42,37 +42,42 @@
               <td>
                 s3807131@student.rmit.edu.au
               </td>
-              <td>  <a href="./group/heran.html" class="button alt">More</a></td>
+              <td> <a href="./group/heran.html" class="button alt">More</a></td>
             </tr>
             <tr>
 
               <td>Yi Yang</td>
               <td>s3798354@student.rmit.edu.au</td>
-              <td><a href="./group/yi.html" class="button alt">More</a></td></td>
+              <td><a href="./group/yi.html" class="button alt">More</a></td>
+              </td>
             </tr>
             <tr>
 
               <td>Le Gia Hung</td>
               <td>s3748335@student.rmit.edu.au </td>
-              <td><a href="./group/gia.html" class="button alt">More</a></td></td>
+              <td><a href="./group/gia.html" class="button alt">More</a></td>
+              </td>
             </tr>
             <tr>
 
               <td>Mingxuan Zhou</td>
               <td>s3798529@student.rmit.edu.au </td>
-              <td><a href="./group/mingxuan.html" class="button alt">More</a></td></td>
+              <td><a href="./group/mingxuan.html" class="button alt">More</a></td>
+              </td>
             </tr>
             <tr>
 
               <td>Zhihao Liang</td>
               <td>s3798366@student.rmit.edu.au</td>
-              <td><a href="./group/zhihao.html" class="button alt">More</a></td></td>
+              <td><a href="./group/zhihao.html" class="button alt">More</a></td>
+              </td>
             </tr>
             <tr>
 
               <td>Yingjian Di</td>
               <td>S3798345@student.rmit.edu.au</td>
-              <td><a href="./group/yingjian.html" class="button alt">More</a></td></td>
+              <td><a href="./group/yingjian.html" class="button alt">More</a></td>
+              </td>
             </tr>
           </tbody>
         </table>
