--- a/P1/what.html
+++ b/P1/what.html
@@ -44,7 +44,10 @@
       <h2>1.Description</h2>
       <!-- STUB: done -->
       <p>
-        In the current Covid-19 epidemic situation in most countries. People are restricted from going out and that greatly affects the quality of their meals. The project we decided to implement is a food and recipe application that organizes a list of recipes based on the ingredients in the user's kitchen. It is expected to solve the problem of not knowing how to use the ingredients at home and providing ideas on what to cook. 
+        In the current Covid-19 epidemic situation in most countries. People are restricted from going out and that
+        greatly affects the quality of their meals. The project we decided to implement is a food and recipe application
+        that organizes a list of recipes based on the ingredients in the user's kitchen. It is expected to solve the
+        problem of not knowing how to use the ingredients at home and providing ideas on what to cook.
 
 
       <p><b>High level user story: <br></b> <b> As a</b> user,
@@ -55,14 +58,23 @@
       </p>
       <h2>2.Demonstrable Outcomes</h2>
       <h3>2.1 Project Motivation</h3>
-      <p>This is an upgrade project extended from the Gia's Introduction to IT's project. Originally, we are trying to build a recipe sharing web application, which is mainly to offer ideas to people who have ingredients in their kitchen but don't know what to cook. After having a meeting with Dr.B, we agree with doing some adjustments to this idea, which backward the procedure of the original idea. The website will let users choose ingredients first and it will recommend recipes accordingly. Due to the fact that our group has not done any web application before, it is challenging enough to endeavor to achieve this project. However, our group has all the necessary knowledge to do this project. Some of us are good at HTML, CSS, JS which benefits building front-end and some of us are fond of coding which helps back-end. We all have experience with Java and choose Spring Boot as a new tool to code. And we all know about database concepts and could have collaborative teamwork with building a well-organized database. As a result, our group chooses this topic as our project. </p>
+      <p>This is an upgrade project extended from the Gia's Introduction to IT's project. Originally, we are trying to
+        build a recipe sharing web application, which is mainly to offer ideas to people who have ingredients in their
+        kitchen but don't know what to cook. After having a meeting with Dr.B, we agree with doing some adjustments to
+        this idea, which backward the procedure of the original idea. The website will let users choose ingredients
+        first and it will recommend recipes accordingly. Due to the fact that our group has not done any web application
+        before, it is challenging enough to endeavor to achieve this project. However, our group has all the necessary
+        knowledge to do this project. Some of us are good at HTML, CSS, JS which benefits building front-end and some of
+        us are fond of coding which helps back-end. We all have experience with Java and choose Spring Boot as a new
+        tool to code. And we all know about database concepts and could have collaborative teamwork with building a
+        well-organized database. As a result, our group chooses this topic as our project. </p>
       <h3>2.2 Minimum Viable Features (MVF)</h3>
 
       <ul>
         <li>
           <b> Personal account managing system:</b> <br />
           Users should be able to create new accounts, log in, and log out.
-        
+
           <table data-toggle="table">
             <thead>
               <tr>
@@ -142,7 +154,7 @@
                 </td>
                 <td>
                   <p>
-                     <br><br>Criterion 0:
+                    <br><br>Criterion 0:
                     <b><br>Given</b> that I am not the registered user And I want to sign up,
                     <b><br>When</b> I click the sign-up button And enter the required information
                     <b><br>Then</b> the system shows I registered successfully And take me to the index page.
@@ -257,7 +269,7 @@
               <tr>
                 <td>
                   <b><br>As a user,</b>
-                  <b><br>I want/can</b> know about each recipe more graphically, 
+                  <b><br>I want/can</b> know about each recipe more graphically,
                   <b><br>so that</b> I could decide if I wanna cook this dish.
                 </td>
                 <td>
@@ -265,7 +277,8 @@
                     <br><br>Criterion 0: <br>
                     <b>Given</b> I have logged in and entered the main page<br>
                     <b><br>When</b> I see the recipe picture I have interest in and click the picture<br>
-                    <b><br>Then</b> I entered a new page that has detailed information on the recipe including ingredients and cooking methods.<br>
+                    <b><br>Then</b> I entered a new page that has detailed information on the recipe including
+                    ingredients and cooking methods.<br>
                   </p>
                 </td>
               </tr>
@@ -288,8 +301,8 @@
             <tbody>
               <tr>
                 <td>
-                  <b><br>As  </b>a user who is a starter in cooking
-                  <b><br>I want/can</b>  know the exact cooking steps of a recipe,
+                  <b><br>As </b>a user who is a starter in cooking
+                  <b><br>I want/can</b> know the exact cooking steps of a recipe,
                   <b><br>so that</b> I could succeed more easily.
                 </td>
                 <td>
@@ -440,16 +453,16 @@
             <tbody>
               <tr>
                 <td><b>As a</b> user,
-                  <b><br>I can/ I want</b> to express opinions 
+                  <b><br>I can/ I want</b> to express opinions
                   <b><br>so that</b> I comment others' recipes </td>
                 <td>
                   <p>
                     <br><br>Criterion
                     <b><br>Given</b> the user is logged on
                     <b><br>When</b> the user click the comment button
-                    <b><br>Then</b> the system navigate to the comment page 
+                    <b><br>Then</b> the system navigate to the comment page
                     <b><br>When</b> the user type the comments and click post button
-                    <b><br>Then</b> the system navigate back to the recipe page to show the specific 
+                    <b><br>Then</b> the system navigate back to the recipe page to show the specific
                     comment and add the comment to the database
                   </p>
                   <p>
@@ -476,15 +489,16 @@
               <tr>
                 <td>
                   <b>As a</b> user
-                  <p><b>I want/can</b>  see health tips on recipes</p>
+                  <p><b>I want/can</b> see health tips on recipes</p>
                   <p><b>so that</b> I know if this recipe is a risk to my health </p>
                 </td>
                 <td>
                   <p>
                     <br><br>Criterion 0: <br>
                     <b>Given</b> I have logged in And am on the main page<br>
-                    <b><br>When</b> I see the pictures of the recipes And every recipe picture will have a warning "button" to indicate the relevant health risk alert And I move the mouse over "button" section <br>
-                    <b><br>Then</b>  tell me the healthy warning about this recipe<br>
+                    <b><br>When</b> I see the pictures of the recipes And every recipe picture will have a warning
+                    "button" to indicate the relevant health risk alert And I move the mouse over "button" section <br>
+                    <b><br>Then</b> tell me the healthy warning about this recipe<br>
 
                   </p>
                 </td>
@@ -563,7 +577,8 @@
         </li>
         <li>
           <b>Shopping helper: </b> <br />
-          When missing ingredients are detected, the website could search nearby shops for supplement or even help users order them online. 
+          When missing ingredients are detected, the website could search nearby shops for supplement or even help users
+          order them online.
           <table data-toggle="table">
             <thead>
               <tr>
@@ -588,7 +603,7 @@
                   </p>
                 </td>
               </tr>
-              
+
             </tbody>
           </table>
         </li>
@@ -849,7 +864,7 @@
           </tr>
         </tbody>
       </table>
-   
+
       <h3>3.2 Beyond Current Capabilities</h3>
       <table data-toggle="table">
         <thead>
@@ -892,7 +907,10 @@
             <td>Le Gia Hung</td>
             <td>
               <p>
-                This is an assignment required to do 1 complete app, so what I have been learning is not enough. They need full stack developed, so this will be a time challenge for not only me but the team. Anyway, we will try to complete them as much as possible, although not completely, we will meet the requirements of the project. 
+                This is an assignment required to do 1 complete app, so what I have been learning is not enough. They
+                need full stack developed, so this will be a time challenge for not only me but the team. Anyway, we
+                will try to complete them as much as possible, although not completely, we will meet the requirements of
+                the project.
               </p>
             </td>
 
