--- a/P2/MVF3-Data_collection_and_recommendation.html
+++ b/P2/MVF3-Data_collection_and_recommendation.html
@@ -18,7 +18,7 @@
 <html>
 
 <head>
-  <title>MVF5-Step-by-step instructions</title>
+  <title>MVF3-Data collection and recommendation</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -38,7 +38,7 @@
   <section id="main">
     <div class="inner">
       <header class="major special">
-        <h1>MVF5 - Step-by-step instructions</h1>
+        <h1>MVF3 - Data collection and recommendation</h1>
       </header>
       <!-- <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a> -->
       <h2>1. Feature descriptions</h2>
@@ -67,7 +67,7 @@
       <ul>
 
         <li>
-          <b> Step-by-step instructions:</b> <br />
+          <b> Data collection and recommendation:</b> <br />
           xxxxxxxxxxxxxx
 
           <table data-toggle="table">
@@ -76,20 +76,42 @@
                 <th>User story</th>
                 <th>Acceptance criteria</th>
               </tr>
+
+
             </thead>
             <tbody>
               <tr>
                 <td>
-                  <b><br>As </b>a user who is a starter in cooking
-                  <b><br>I want/can</b> know the exact cooking steps of a recipe,
-                  <b><br>so that</b> I could succeed more easily.
+                  <b>As a</b> user
+                  <p><b>I want/can</b> search a kind of food ingredients in application</p>
+                  <p><b>so that</b> give me the corresponding recipe to use this kind of food ingredients</p>
                 </td>
                 <td>
                   <p>
                     <br><br>Criterion 0: <br>
-                    <b>Given</b> I have entered a specific recipe page.<br>
-                    <b><br>When</b> I decide I want to have a try on this recipe.<br>
-                    <b><br>Then</b>I scroll down and follow each step while cooking.<br>
+                    <b>Given</b> user a navigation bar And a "Search" button<br>
+                    <b><br>When</b> user put the name of a food ingredient in the navigation bar And
+                    they touch research.<br>
+                    <b><br>Then</b> give them corresponding recipe And put other recommendation recipes at the
+                    bottom.<br>
+                  </p>
+                </td>
+              </tr>
+
+              <tr>
+                <td>
+                  <b><br>As a user,</b>
+                  <b><br>I want/can</b> search a kind of food ingredients in application
+                  <b><br>so that</b> give me the corresponding recipe to use this kind of food ingredients
+                </td>
+                <td>
+                  <p>
+                    <br><br>Criterion 0: <br>
+                    <b>Given</b> user a navigation bar And a "Search" button<br>
+                    <b><br>When</b> user put the name of a food ingredient in the navigation bar And
+                    they touch research.<br>
+                    <b><br>Then</b> give them corresponding recipe And put other recommendation recipes at the
+                    bottom.<br>
                   </p>
                 </td>
               </tr>
