--- a/P2/MVF4-Recipe_information.html
+++ b/P2/MVF4-Recipe_information.html
@@ -16,78 +16,109 @@
           </table> -->
 
 <html>
-  <head>
-    <title>MVF4-Recipe information</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link rel="stylesheet" href="/assets/css/main.css" />
-    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
-  </head>
 
-  <body>
-    <!-- Header -->
-    <div id="headerDiv"></div>
-  
-    <!-- Main -->
-    <section id="main">
-      <div class="inner">
-        <header class="major special">
-          <h1>MVF4 - Recipe information</h1>
-        </header>
-        <!-- <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a> -->
-        <h2>1. Feature descriptions</h2>
-        <!-- STUB: done -->
-        <p>
-          balabalabala
-  
-        <p><b>mockup video: <br></b> 
-          <b><video width="960" height="600" controls>
-              <source src="#" type="#">
-            </video>
+<head>
+  <title>MVF4-Recipe information</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css" />
+  <link rel="stylesheet" href="/assets/css/main.css" />
+  <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
+</head>
+
+<body>
+  <!-- Header -->
+  <div id="headerDiv"></div>
+
+  <!-- Main -->
+  <section id="main">
+    <div class="inner">
+      <header class="major special">
+        <h1>MVF4 - Recipe information</h1>
+      </header>
+      <!-- <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a> -->
+      <h2>1. Feature descriptions</h2>
+      <!-- STUB: done -->
+      <p>
+        balabalabala
+
+      <p><b>mockup video: <br></b>
+        <b><video width="960" height="600" controls>
+            <source src="#" type="#">
+          </video>
           </video></p>
-        </p>
-        <h2>2.Design Diagrams</h2>
-        <p><b>put the image here (then delete this line)<br>
-          <b><image width="960" height="600" > 
-            <source src="#" type="video/mp4">
-          </image> 
+      </p>
+      <h2>2.Design Diagrams</h2>
+      <p><b>put the image here (then delete this line)<br>
+          <b>
+            <image width="960" height="600">
+              <source src="#" type="video/mp4">
+            </image>
           </b>
         </b>
-        <h3>2.1 Explanation</h3>
-        <p> WRITE SOMETHING </p>
-        <h3>2.2 User story and criterias</h3>
-  
-        <ul>
-          
-          <li>
-            <b>Recipe information:</b> <br />
+      <h3>2.1 Explanation</h3>
+      <p> WRITE SOMETHING </p>
+      <h3>2.2 User story and criterias</h3>
 
-          </li>
-          
-          <br />
+      <ul>
+
+        <li>
+          <b> Recipe information:</b> <br />
+          xxxxxxxxxxxxxx
+
+          <table data-toggle="table">
+            <thead>
+              <tr>
+                <th>User story</th>
+                <th>Acceptance criteria</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <b><br>As a user,</b>
+                  <b><br>I want/can</b> know about each recipe more graphically,
+                  <b><br>so that</b> I could decide if I wanna cook this dish.
+                </td>
+                <td>
+                  <p>
+                    <br><br>Criterion 0: <br>
+                    <b>Given</b> I have logged in and entered the main page<br>
+                    <b><br>When</b> I see the recipe picture I have interest in and click the picture<br>
+                    <b><br>Then</b> I entered a new page that has detailed information on the recipe including
+                    ingredients and cooking methods.<br>
+                  </p>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </li>
+
+        <br />
         </ol>
-      </div>
-    </section>
-  
-    <!-- Footer -->
-    <div id="footerDiv"></div>
-  
-    <!-- Scripts -->
-    <script src="/assets/js/jquery.min.js"></script>
-    <script src="/assets/js/skel.min.js"></script>
-    <script src="/assets/js/util.js"></script>
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/loader.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-      </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-      </script>
-    <script src="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.js"></script>
-  </body>
-  
-  </html>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <div id="footerDiv"></div>
+
+  <!-- Scripts -->
+  <script src="/assets/js/jquery.min.js"></script>
+  <script src="/assets/js/skel.min.js"></script>
+  <script src="/assets/js/util.js"></script>
+  <script src="/assets/js/main.js"></script>
+  <script src="/assets/js/loader.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+  <script src="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.js"></script>
+</body>
+
+</html>
