--- a/P2/MVF2-Slider.html
+++ b/P2/MVF2-Slider.html
@@ -46,30 +46,31 @@
       <p>
         balabalabala
 
-      <p><b>mockup video: <br></b> 
+      <p><b>mockup video: <br></b>
         <b><video width="960" height="600" controls>
             <source src="#" type="#">
           </video>
-        </video></p>
+          </video></p>
       </p>
       <h2>2.Design Diagrams</h2>
       <p><b>put the image here (then delete this line)<br>
-        <b><image width="960" height="600" > 
-          <source src="#" type="video/mp4">
-        </image> 
+          <b>
+            <image width="960" height="600">
+              <source src="#" type="video/mp4">
+            </image>
+          </b>
         </b>
-      </b>
       <h3>2.1 Explanation</h3>
-      <p> WRITE SOMETHING </p>
+      <p>The main page will have a picture slider that shows recommending recipes.
+        These recipes are choosed by the users beacuse each recipe has a red heart as the like button and users can
+        light the heart to show their preference and the system will illustrate the best 4 recipes for the users.
+      </p>
       <h3>2.2 User story and criterias</h3>
 
       <ul>
-        
+
         <li>
           <b> Slider:</b> <br />
-          The main page will have a picture slider that shows recommending recipes.
-          These recipes are choosed by the users beacuse each recipe has a red heart as the like button and users can 
-          light the heart to show their preference and the system will illustrate the best 4 recipes for the users.
 
           <table data-toggle="table">
             <thead>
@@ -103,9 +104,9 @@
             </tbody>
           </table>
         </li>
-        
+
         <br />
-      </ol>
+        </ol>
     </div>
   </section>
 
