--- a/P1/how.html
+++ b/P1/how.html
@@ -30,7 +30,7 @@
       <h2>1. Resources and Tools</h2>
       <ul>
         <li>
-          <img src="images/java.jpg" width="367" height="248" alt="" />
+          <img src="/images/java.jpg" width="367" height="248" alt="" />
           <p>
             <b>Description:</b> Java is a general-purpose programming language
             that is class-based, object-oriented.
@@ -46,7 +46,7 @@
           </p>
         </li>
         <li>
-          <img src="images/springboot.jpg" width="467" height="248" alt="" />
+          <img src="/images/springboot.jpg" width="467" height="248" alt="" />
           <p>
             <b>Description:</b> Spring boot is a back-end application
             framework for java platform.
@@ -59,7 +59,7 @@
           </p>
         </li>
         <li>
-          <img src="images/thymeleaf.png" width="248" height="248" alt="" />
+          <img src="/images/thymeleaf.png" width="248" height="248" alt="" />
           <p>
             <b>Description:</b> Thymeleaf is a modern server-side Java
             template engine.
@@ -74,7 +74,7 @@
           </p>
         </li>
         <li>
-          <img src="images/mybatis.jpg" width="367" height="248" alt="" />
+          <img src="/images/mybatis.jpg" width="367" height="248" alt="" />
           <p>
             <b>Description:</b> MyBatis is a persistence framework with
             support for custom SQL, stored procedures and advanced mappings.
@@ -90,7 +90,7 @@
         </li>
 
         <li>
-          <img src="images/mysql.jpg" width="367" height="248" alt="" />
+          <img src="/images/mysql.jpg" width="367" height="248" alt="" />
           <p>
             <b>Description:</b> Mysql is the world's most popular open source
             database. <a href="https://www.mysql.com/">(link)</a>
