--- a/P2/MVF7-Upload_and_manage_posts.html
+++ b/P2/MVF7-Upload_and_manage_posts.html
@@ -52,15 +52,8 @@
           </video>
           </video></p>
       </p>
-      <h2>2.Design Diagrams</h2>
-      <p><b>put the image here (then delete this line)<br>
-          <b>
-            <image width="960" height="600">
-              <source src="#" type="video/mp4">
-            </image>
-          </b>
-        </b>
-      <h3>2.1 Explanation</h3>
+      <h2>2.Explanation</h2>
+      <h3>2.1 Description</h3>
       <p> WRITE SOMETHING </p>
       <h3>2.2 User story and criterias</h3>
 
