--- a/P2/MVF7-Upload_and_manage_posts.html
+++ b/P2/MVF7-Upload_and_manage_posts.html
@@ -44,7 +44,7 @@
       <h2>1. Feature descriptions</h2>
       <!-- STUB: done -->
       <p>
-        balabalabala
+        Write something to describe the feature in details
 
       <p><b>mockup video: <br></b>
         <b><video width="960" height="600" controls>
@@ -53,9 +53,7 @@
           </video></p>
       </p>
       <h2>2.Explanation</h2>
-      <h3>2.1 Description</h3>
-      <p> WRITE SOMETHING </p>
-      <h3>2.2 User story and criterias</h3>
+      <h3>2.1 User story and criterias</h3>
 
       <ul>
 
