move the video area to index page, add the design diagram area in features detail page

--- a/P2/MVF4-Recipe_information.html
+++ b/P2/MVF4-Recipe_information.html
@@ -41,19 +41,19 @@
         <h1>MVF4 - Recipe information</h1>
       </header>
       <!-- <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a> -->
-      <h2>1. Feature descriptions</h2>
+      <h2>1. Diagram design</h2>
       <!-- STUB: done -->
       <p>
-        Write something to describe the feature in details
 
-      <p><b>mockup video: <br></b>
-        <b><video width="960" height="600" controls>
+      <p><b>Activity diagram: <br></b>
+        <b><image width="960" height="600" controls>
             <source src="#" type="#">
-          </video>
-          </video></p>
+            </image></p>
       </p>
       <h2>2.Explanation</h2>
-      <h3>2.1 User story and criterias</h3>
+      <h3>2.1 Description</h3>
+      <p> WRITE SOMETHING </p>
+      <h3>2.2 User story and criterias</h3>
 
       <ul>
 
