--- a/index.html
+++ b/index.html
@@ -32,16 +32,17 @@
   <section id="one">
     <div class="inner">
       <header>
-        <h2>Our Group</h2>
+        <h2>Mockup video</h2>
       </header>
       <p>
-        Our group name is "Ditto" <br />
-        In our fantastic group, we have web designer and java programmer.<br />We
-        all are into coding and building a new world on the Internet
+        <video width="1440" height="900" controls>
+          <source src="#" type="#">>
+          
+        </video>
       </p>
 
       <ul class="actions">
-        <li><a href="/P1/group.html" class="button alt">Learn More</a></li>
+        <li><a href="/P2/MVF1-Account_management.html" class="button alt">Learn More</a></li>
       </ul>
     </div>
   </section>
