--- a/P2/MVF6-Tags_and_searching.html
+++ b/P2/MVF6-Tags_and_searching.html
@@ -46,9 +46,9 @@
       <p>
 
       <p><b>Activity diagram: <br></b>
-        <b><image width="960" height="600" controls>
-            <source src="#" type="#">
-            </image></p>
+        <b><img src="/images/MVF6_Activity_diagram.png" width="960" height="600" alt="" />
+        </p>
+            
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
