--- a/P2/MVF2-Slider.html
+++ b/P2/MVF2-Slider.html
@@ -46,9 +46,7 @@
       <p>
 
       <p><b>Activity diagram: <br></b>
-        <b><image width="960" height="600" controls>
-            <source src="#" type="#">
-            </image></p>
+        <b><img src="#" width="960" height="600" alt="" /></p>
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
