update M5 description(Lacking activity diagram)

--- a/P2/MVF5-Step-by-step_instructions.html
+++ b/P2/MVF5-Step-by-step_instructions.html
@@ -50,7 +50,7 @@
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
-      <p> WRITE SOMETHING </p>
+      <p> Each recipe page will have detailed information about ingredients and step-by-step instructions with pictures which will be applied to help the user to cook. </p>
       <h3>2.2 User story and criterias</h3>
 
       <ul>
