add description for MVF2 and 6

--- a/P2/MVF2-Slider.html
+++ b/P2/MVF2-Slider.html
@@ -50,7 +50,12 @@
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
-      <p> WRITE SOMETHING </p>
+      <p style="color: black;"> 
+        The slider is showed in homepage which has four pages and they are the best four liked
+         recipes of the website. The slider is able to swith the pages automaticly and users can also
+           swith pages by clicking the button under the slices. Further more, user can
+            access the recipe detail page direcctly by simply clicking the picture.
+      </p>
       <h3>2.2 User story and criterias</h3>
 
       <ul>
