--- a/P2/MVF6-Tags_and_searching.html
+++ b/P2/MVF6-Tags_and_searching.html
@@ -52,7 +52,10 @@
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
-      <p> WRITE SOMETHING </p>
+      <p style="color: black;"> Users can add multiple tags while editing the recipes and others can search the recipes using
+         those tags as the keywords. Tags are mainly key ingredients in specific recipe,
+          special tast of the meal or the cooking methods of the meal.
+      </p>
       <h3>2.2 User story and criterias</h3>
 
       <ul>
