--- a/P2/MVF1-Account_management.html
+++ b/P2/MVF1-Account_management.html
@@ -50,7 +50,7 @@
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
-      <p> WRITE SOMETHING </p>
+      <p style="color: black;"> WRITE SOMETHING </p>
       <h3>2.2 User story and criterias</h3>
 
       <ul>
