--- a/P2/MVF1-Account_management.html
+++ b/P2/MVF1-Account_management.html
@@ -44,6 +44,7 @@
       <h2>1. Diagram design</h2>
       <!-- STUB: done -->
       <p>
+        Users should be able to create new accounts, log in, and log out.  
 
       <p><b>Activity diagram: <br></b>
         <b><img src="#" width="960" height="600" alt="" /></p>
