--- a/P2/MVF7-Upload_and_manage_posts.html
+++ b/P2/MVF7-Upload_and_manage_posts.html
@@ -10,7 +10,7 @@
               <tr>
                 <td></td>
                 <td></td>
-               
+
               </tr>
             </tbody>
           </table> -->
@@ -46,11 +46,17 @@
       <p>
 
       <p><b>Activity diagram: <br></b>
-        <b><img src="#" width="960" height="600" alt="" /></p>
+        <b><img src="images/mvf6Diagram.jpg"/></p>
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
-      <p style="color: black;"> WRITE SOMETHING </p>
+      <p style="color: black;">
+        <ul>
+          <li>Basically, the two functions to upload and edit this post are almost equivalent. They allow users to share and edit their recipes with social media.</li>
+          <li>Upload and edit post uses popular design for most of today's social networks, so it is very user-friendly. They are also designed by us according to the 10 hierarchy design principles.</li>
+          <li>According to the above diagram, users can freely manipulate as they want and still complete the task because this function does not force the user to follow specific rules to upload a recipe. Even so to upload a recipe, they still have to fill in its minimum information.</li>
+        </ul>
+      </p>
       <h3>2.2 User story and criterias</h3>
 
       <ul>
