--- a/P2/MVF1-Account_management.html
+++ b/P2/MVF1-Account_management.html
@@ -44,16 +44,16 @@
       <h2>1. Diagram design</h2>
       <!-- STUB: done -->
       <p>
-        Users should be able to create new accounts, log in, and log out.  
-
-      <p><b>Activity diagram: <br></b>
-        <b><img src="#" width="960" height="600" alt="" /></p>
-      </p>
+        <b><img src="/images/MVF1_Activity_diagram.png"  alt="" />
+        </p>
+      <p>
+        Users should be able to create new accounts, log in, and log out.
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
       <p style="color: black;"> WRITE SOMETHING </p>
       <h3>2.2 User story and criterias</h3>
 
+     
       <ul>
 
         <li>
