update MVF5 activity diagram

--- a/P2/MVF5-Step-by-step_instructions.html
+++ b/P2/MVF5-Step-by-step_instructions.html
@@ -43,16 +43,17 @@
       <!-- <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a> -->
       <h2>1. Diagram design</h2>
       <!-- STUB: done -->
-      <p>
+     <p> 
+       <p><b>Activity diagram: <br></b>
+        <b><img src="/images/MVF5.png" width="960" height="600" alt="" />
+        </p>
 
       <p><b>Activity diagram: <br></b>
         <b><img src="#" width="960" height="600" alt="" /></p>
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
-      <p style="color: black;"> Each recipe page will have detailed information about 
-        ingredients and step-by-step instructions with pictures which will be applied to help
-         the user to cook. </p>
+      <p> Each recipe page will have detailed information about ingredients and step-by-step instructions with pictures which will help user to cook. </p>
       <h3>2.2 User story and criterias</h3>
 
       <ul>
