new MVF3 activity diagram add

--- a/P2/MVF3-Data_collection_and_recommendation.html
+++ b/P2/MVF3-Data_collection_and_recommendation.html
@@ -46,7 +46,7 @@
       <p>
 
       <p><b>Activity diagram: <br></b>
-        <b><img src="#" width="960" height="600" alt="" /></p>
+        <b><img src="/images/MVF3.png" width="960" height="600" alt="" /></p>
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
