change the link for the image

--- a/P2/MVF7-Upload_and_manage_posts.html
+++ b/P2/MVF7-Upload_and_manage_posts.html
@@ -46,7 +46,7 @@
       <p>
 
       <p><b>Activity diagram: <br></b>
-        <b><img src="images/mvf6Diagram.jpg"/></p>
+        <b><img src="/images/mvf6Diagram.jpg"/></p>
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
