--- a/P2/github/commits.html
+++ b/P2/github/commits.html
@@ -22,7 +22,7 @@
   <section id="main">
     <div class="inner">
       <header class="major special">
-        <h1>Github Commits</h1>
+        <h1>Github Commits until 9/15/2020</h1>
       </header>
 
       <table data-toggle="table">
@@ -36,8 +36,28 @@
         <tbody>
          <tr>
              <td>Zhihao Liang</td>
-             <td>1</td>
+             <td>20</td>
          </tr>
+         <tr>
+            <td>Gia Hung Le</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>Heran Wang</td>
+            <td>4</td>
+        </tr>
+        <tr>
+            <td>Yingjian Di</td>
+            <td>0</td>
+        </tr>
+        <tr>
+            <td>Mingxuan Zhou</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>Yi Yang</td>
+            <td>19</td>
+        </tr>
         </tbody>
       </table>
     </div>
