modified some names and grammar mistakes

--- a/P2/MVF1-Account_management.html
+++ b/P2/MVF1-Account_management.html
@@ -38,7 +38,7 @@
   <section id="main">
     <div class="inner">
       <header class="major special">
-        <h1>MVF1 - Account management</h1>
+        <h1>MVF1 - Account System</h1>
       </header>
       <!-- <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a> -->
       <h2>1. Diagram design</h2>
@@ -47,11 +47,11 @@
         <b><img src="/images/MVF1_Activity_diagram.png"  alt="" />
         </p>
       <p>
-        Users should be able to create new accounts, log in, and log out.
+  
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
-      <p style="color: black;"> WRITE SOMETHING </p>
-      <h3>2.2 User story and criterias</h3>
+      <p style="color: black;">      In this feature, users can have their account access more functions, like post and manage recipes, write a comment for a recipe. In addition, only registered users can save and collect their favorite recipes. </p>
+      <h3>2.2 User story and criteria</h3>
 
      
       <ul>
