--- a/P2/MVF2-Slider.html
+++ b/P2/MVF2-Slider.html
@@ -37,12 +37,17 @@
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
       <p style="color: black;"> 
-        The slider is showed in homepage which has four pages and they are the best four liked
-         recipes of the website. The slider is able to swith the pages automaticly and users can also
-           swith pages by clicking the button under the slices. Further more, user can
-            access the recipe detail page direcctly by simply clicking the picture.
+        The slider is showed in homepage which has four pages, and they are the best four liked 
+
+        recipes of the website. The slider is able to switch the pages automatically and users can also 
+
+          switch pages by clicking the button under the slices. Furthermore, user can 
+
+           access the recipe detail page directly by simply clicking the picture. 
+
+
       </p>
-      <h3>2.2 User story and criterias</h3>
+      <h3>2.2 User story and criteria</h3>
 
       <ul>
 
