--- a/P2/MVF4-Recipe_information.html
+++ b/P2/MVF4-Recipe_information.html
@@ -18,13 +18,13 @@
 <html>
 
 <head>
-  <title>MVF4-Recipe information</title>
+  <title>MVF4-Recipe thumbnail </title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-  integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css" />
   <link rel="stylesheet" href="/assets/css/main.css" />
   <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
@@ -38,25 +38,27 @@
   <section id="main">
     <div class="inner">
       <header class="major special">
-        <h1>MVF4 - Recipe information</h1>
+        <h1>MVF4 - Recipe thumbnail </h1>
       </header>
       <!-- <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a> -->
       <h2>1. Diagram design</h2>
       <!-- STUB: done -->
       <p>
 
-      <p><b>Activity diagram: <br></b>
-        <b><img src="#" width="960" height="600" alt="" /></p>
+        <p><b>Activity diagram: <br></b>
+          <b><img src="#" width="960" height="600" alt="" /></p>
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
-      <p style="color: black;">Below the slider, there will be a list of recipes with pictures. Users can click on the picture for further information.   </p>
+      <p style="color: black;">This feature allows users to select what recipe they need in a rapid way. We provide a
+        small recipe card with the title, author and its tags. Registered users also can directly like the recipe
+        through “like” button and save the recipe through save button. </p>
       <h3>2.2 User story and criteria</h3>
 
       <ul>
 
         <li>
-          <b> Recipe information:</b> <br />
+
 
           <table data-toggle="table">
             <thead>
