--- a/P2/MVF3-Data_collection_and_recommendation.html
+++ b/P2/MVF3-Data_collection_and_recommendation.html
@@ -18,13 +18,13 @@
 <html>
 
 <head>
-  <title>MVF3-Data collection and recommendation</title>
+  <title>MVF3-Kitchen and Pantry System</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-  integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css" />
   <link rel="stylesheet" href="/assets/css/main.css" />
   <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
@@ -38,7 +38,7 @@
   <section id="main">
     <div class="inner">
       <header class="major special">
-        <h1>MVF3 - Data collection and recommendation</h1>
+        <h1>MVF3 - Kitchen and Pantry System </h1>
       </header>
       <!-- <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a> -->
       <h2>1. Diagram design</h2>
@@ -50,14 +50,14 @@
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
-      <p style="color: black;"> WRITE SOMETHING </p>
-      <h3>2.2 User story and criterias</h3>
+      <p style="color: black;"> This is our one of key features. We allow registered users to have their online kitchen
+        to record what the user has in the real kitchen like ingredients so that the system can recommend the suitable
+        website by those ingredients. </p>
+      <h3>2.2 User story and criteria</h3>
 
       <ul>
 
         <li>
-          <b> Data collection and recommendation:</b> <br />
-
           <table data-toggle="table">
             <thead>
               <tr>
