--- a/P2/MVF5-Step-by-step_instructions.html
+++ b/P2/MVF5-Step-by-step_instructions.html
@@ -22,9 +22,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-  integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css" />
   <link rel="stylesheet" href="/assets/css/main.css" />
   <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
@@ -43,49 +43,50 @@
       <!-- <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a> -->
       <h2>1. Diagram design</h2>
       <!-- STUB: done -->
-     <p> 
-       <p><b>Activity diagram: <br></b>
-        <b><img src="/images/MVF5.png" width="960" height="600" alt="" />
+      <p>
+        <p><b>Activity diagram: <br></b>
+          <b><img src="/images/MVF5.png" width="960" height="600" alt="" />
         </p>
-      <h2>2.Explanation</h2>
-      <h3>2.1 Description</h3>
-      <p> Each recipe page will have detailed information about ingredients and step-by-step instructions with pictures which will help user to cook. </p>
-      <h3>2.2 User story and criterias</h3>
+        <h2>2.Explanation</h2>
+        <h3>2.1 Description</h3>
+        <p> Each recipe page will have detailed information about ingredients and step-by-step instructions with
+          pictures which will help user to cook. </p>
+        <h3>2.2 User story and criteria</h3>
 
-      <ul>
+        <ul>
 
-        <li>
-          <b> Step-by-step instructions:</b> <br />
+          <li>
+            <b> Step-by-step instructions:</b> <br />
 
-          <table data-toggle="table">
-            <thead>
-              <tr>
-                <th>User story</th>
-                <th>Acceptance criteria</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>
-                  <b><br>As </b>a user who is a starter in cooking
-                  <b><br>I want/can</b> know the exact cooking steps of a recipe,
-                  <b><br>so that</b> I could succeed more easily.
-                </td>
-                <td>
-                  <p>
-                    <br><br>Criterion 0: <br>
-                    <b>Given</b> I have entered a specific recipe page.<br>
-                    <b><br>When</b> I decide I want to have a try on this recipe.<br>
-                    <b><br>Then</b>I scroll down and follow each step while cooking.<br>
-                  </p>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </li>
+            <table data-toggle="table">
+              <thead>
+                <tr>
+                  <th>User story</th>
+                  <th>Acceptance criteria</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>
+                    <b><br>As </b>a user who is a starter in cooking
+                    <b><br>I want/can</b> know the exact cooking steps of a recipe,
+                    <b><br>so that</b> I could succeed more easily.
+                  </td>
+                  <td>
+                    <p>
+                      <br><br>Criterion 0: <br>
+                      <b>Given</b> I have entered a specific recipe page.<br>
+                      <b><br>When</b> I decide I want to have a try on this recipe.<br>
+                      <b><br>Then</b>I scroll down and follow each step while cooking.<br>
+                    </p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </li>
 
-        <br />
-        </ol>
+          <br />
+          </ol>
     </div>
   </section>
 
