--- a/P2/MVF6-Tags_and_searching.html
+++ b/P2/MVF6-Tags_and_searching.html
@@ -22,9 +22,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-  integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css" />
   <link rel="stylesheet" href="/assets/css/main.css" />
   <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
@@ -45,18 +45,19 @@
       <!-- STUB: done -->
       <p>
 
-      <p><b>Activity diagram: <br></b>
-        <b><img src="/images/MVF6_Activity_diagram.png" width="960" height="600" alt="" />
+        <p><b>Activity diagram: <br></b>
+          <b><img src="/images/MVF6_Activity_diagram.png" width="960" height="600" alt="" />
         </p>
-            
+
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
-      <p style="color: black;"> Users can add multiple tags while editing the recipes and others can search the recipes using
-         those tags as the keywords. Tags are mainly key ingredients in specific recipe,
-          special tast of the meal or the cooking methods of the meal.
+      <p style="color: black;">
+        To help users find their suitable recipes, tags will be used in recipes. Those tags may
+        contain key ingredients. Users will have a more pleasing searching experience because tags help them to target
+        recipes more precisely.
       </p>
-      <h3>2.2 User story and criterias</h3>
+      <h3>2.2 User story and criteria</h3>
 
       <ul>
 
