--- a/P2/MVF7-Upload_and_manage_posts.html
+++ b/P2/MVF7-Upload_and_manage_posts.html
@@ -22,9 +22,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-  integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css" />
   <link rel="stylesheet" href="/assets/css/main.css" />
   <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
@@ -45,19 +45,23 @@
       <!-- STUB: done -->
       <p>
 
-      <p><b>Activity diagram: <br></b>
-        <b><img src="images/mvf6Diagram.jpg"/></p>
+        <p><b>Activity diagram: <br></b>
+          <b><img src="images/mvf6Diagram.jpg" /></p>
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
       <p style="color: black;">
         <ul>
-          <li>Basically, the two functions to upload and edit this post are almost equivalent. They allow users to share and edit their recipes with social media.</li>
-          <li>Upload and edit post uses popular design for most of today's social networks, so it is very user-friendly. They are also designed by us according to the 10 hierarchy design principles.</li>
-          <li>According to the above diagram, users can freely manipulate as they want and still complete the task because this function does not force the user to follow specific rules to upload a recipe. Even so to upload a recipe, they still have to fill in its minimum information.</li>
+          <li>Basically, the two functions to upload and edit this post are almost equivalent. They allow users to share
+            and edit their recipes</li>
+          <li>Upload and edit post uses popular design for most of today's social networks, so it is very user-friendly.
+            They are also designed by us according to the 10 hierarchy design principles.</li>
+          <li>According to the above diagram, users can freely manipulate as they want and still complete the task
+            because this function does not force the user to follow specific rules to upload a recipe. Even so to upload
+            a recipe, they still have to fill in its minimum information.</li>
         </ul>
       </p>
-      <h3>2.2 User story and criterias</h3>
+      <h3>2.2 User story and criteria</h3>
 
       <ul>
 
