--- a/P2/other/team-meeting.html
+++ b/P2/other/team-meeting.html
@@ -17,7 +17,7 @@
 
 <html>
   <head>
-    <title>MVF4-Recipe information</title>
+    <title>MVF4-Recipe thumbnail </title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
