--- a/P2/other/trello-task.html
+++ b/P2/other/trello-task.html
@@ -243,7 +243,7 @@
               <td><a href="https://trello.com/c/MQVoGvXg">Link</a></td>
             </tr>
             <tr>
-              <td>MVF4 Recipe information</td>
+              <td>MVF4 Recipe thumbnail </td>
               <td>21/09</td>
               <td>25/09</td>
               <td>Yi Yang</td>
