modified file path

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </p>
 
       <ul class="actions">
-        <li><a href="/P2/MVF1-Account_management.html" class="button alt">Learn More</a></li>
+        <li><a href="/MVF1-Account_management.html" class="button alt">Learn More</a></li>
       </ul>
     </div>
   </section>
@@ -73,7 +73,7 @@
             <img src="images/pic02.jpg" width="473px" height="220px" alt="" />
           </div>
           <p>
-            if you are crzay about cooking and be thirsty for sharing your
+            if you are crazy about cooking and be thirsty for sharing your
             wonderful recipes, there is a good place for you.
           </p>
         </div>
