add more diagrams for account feature

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           recipe web application</span>
       </h1>
       <ul class="actions">
-        <li><a href="/P1/what.html" class="button alt">Get Started</a></li>
+        <li><a href="/mvf/MVF1-Account_management.html" class="button alt">Get Started</a></li>
       </ul>
     </div>
   </section>
@@ -94,7 +94,7 @@
             We can do a lot in this project, please see the detail
           </p>
           <ul class="actions">
-            <li><a href="/P1/what.html" class="button alt">Learn More</a></li>
+            <li><a href="#" class="button alt">Learn More</a></li>
           </ul>
         </div>
       </article>
@@ -109,7 +109,7 @@
             application. In the development process, we all will learn more!
           </p>
           <ul class="actions">
-            <li><a href="P1/how.html" class="button alt">Learn More</a></li>
+            <li><a href="other/how.html" class="button alt">Learn More</a></li>
           </ul>
         </div>
       </article>
@@ -124,7 +124,7 @@
             beforehand. We has planned how to complete this project.
           </p>
           <ul class="actions">
-            <li><a href="P1/when.html" class="button alt">Learn More</a></li>
+            <li><a href="mvf/MVF1-Account_management.html" class="button alt">Learn More</a></li>
           </ul>
         </div>
       </article>
@@ -134,13 +134,8 @@
   <!-- Footer -->
   <div id="footerDiv"></div>
 
-  <!-- Scripts -->
-
-  <script src="/assets/js/jquery.min.js"></script>
-  <script src="/assets/js/skel.min.js"></script>
-  <script src="/assets/js/util.js"></script>
-  <script src="/assets/js/main.js"></script>
-  <script src="/assets/js/loader.js"></script>
+    <!-- Scripts -->
+    <script src="/assets/js/common.js"></script>
 </body>
 
 </html>
