--- a/mvf/MVF1-Account_management.html
+++ b/mvf/MVF1-Account_management.html
@@ -44,9 +44,15 @@
       <h2>1. Diagram design</h2>
       <!-- STUB: done -->
       <p>
-        <b><img src="/images/MVF1_Activity_diagram.png"  alt="" />
+        <h3>Activity Diagram</h3>
+        <b><img src="/images/MVF1_Activity_diagram.png"  alt="Activity Diagram" />
         </p>
       <p>
+        <p>
+          <h3>Class Diagram</h3>
+          <b><img src="/images/class-account.bmp"  alt="Class Diagram" />
+          </p>
+        <p>
   
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
